# STUDYBOARD-PWA

./: .env  .env.example  .gitignore  API.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SETUP_GUIDE.md  docker-compose.yml  index.html  nginx.conf  service-worker.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-cpp.yml  ci.yml  deploy.yml
backend/: ai_antivirus.py  cpp_python_bridge.py  model_loader.py  requirements.txt  server.py
backend/tests/: test_server.py
cpp_bridge/: CMakeLists.txt  bridge.cpp  bridge.h
public/: about.html  app.js  index.html  manifest.json  service-worker.js  styles.css
public/assets/: .gitkeep
scripts/: setup.ps1  setup.sh
